--- a/codigos/web/ura-joystick/style.css
+++ b/codigos/web/ura-joystick/style.css
@@ -1,152 +1,304 @@
+@import url("https://fonts.googleapis.com/css2?family=Poppins&display=swap");
 
-/* Corpo do Estilo */
-
-body {
-    height: 100vh;
-    width: 100vw;
+* {
+  margin: 0;
+  box-sizing: border-box;
 }
 
-/* Seção responsável pela Imagem */
-
-.image-logo {
-    position: fixed;
-    top: 2rem;
-    left: 45%;
+.main {
+  width: 100vw;
+  height: 95vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-family: "Poppins", sans-serif;
 }
 
 .logo {
-    width: 8rem;
-    height: 6rem;
-}
-
-/* Retirando o estilo da lista */
-
-ul {
-    list-style: none;
-}
-
-/* Seção responsável pelos botões */
-
-/* Posicionamento */
-
-.control-Buttons {
-    position: fixed;
-    top: 12rem;
-    left: 35.5%;
-    width: 18rem;
-    height: 18rem;
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: 1fr 1fr 1fr;
-    row-gap: 1em;
-    column-gap: 1em;
-}
-
-.front {
-    grid-column: 2;
-    grid-row: 1;
+  width: 163px;
+  height: 119px;
+  flex-shrink: 0;
 }
 
 .left {
-    grid-column: 0;
-    grid-row: 2;
+  width: 50vw;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
 }
 
-.stop {
-    grid-column: 2;
-    grid-row: 2;
+.left-logo {
+  display: flex;
+  align-items: center;
+  gap: 20px;
+}
+
+#action > input {
+  width: 500px;
+  height: 56px;
+  border: 1px;
+  border-radius: 5px;
+  padding: 16px 32px 16px 32px;
+  gap: 10px;
+  font-size: 16px;
+  box-shadow: 1px 5px 20px 0px #38383826;
+  outline: none;
+}
+
+.custom-button {
+  margin-top: 40px;
+  margin-left: 55%;
+  width: 154px;
+  height: 52px;
+  border: 1px solid;
+  border-radius: 7px;
+  padding: 8px 40px 8px 40px;
+  background-color: #478ecb;
+  gap: 10px;
+  color: white;
+  font-size: 20px;
+  align-items: flex-end;
+}
+
+.custom-button:hover {
+  background-color: black;
+}
+
+.left-logo > h1 {
+  width: 469px;
+  height: 138px;
+  flex-direction: column;
+  justify-content: center;
+  flex-shrink: 0;
+  font-size: 60px;
+  font-weight: bold;
+  line-height: 70px;
+}
+
+.first-word {
+  color: #478ecb;
+}
+
+.second-word {
+  color: black;
+}
+
+.name-comando {
+  display: flex;
+  width: 540px;
+  height: 66px;
+  flex-direction: column;
+  justify-content: center;
+  flex-shrink: 0;
 }
 
 .right {
-    grid-column: 3;
-    grid-row: 2;
+  width: 50vw;
+  height: 50vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
 }
 
-.back {
-    grid-column: 2;
-    grid-row: 3;
+.right > h1 {
+  font-size: 62px;
+  font-weight: bold;
 }
 
-/* Estilo */
-
-.btns {
-    padding: 1em 1.2em;
-    text-align: center;
-    border: none;
-    background-color: #eee;
-    font-size: 22px;
-    cursor: pointer;
+.imagecontrol {
+  width: 151.495px;
+  height: 152.758px;
+  flex-shrink: 0;
 }
 
-a {
-    margin: 0;
-    border: none;
-    text-decoration: none;
+.line {
+  width: 1px;
+  height: 720px;
 }
 
-.btns:active {
-    background-color: #ccc; 
+.icons {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
 }
 
-/* Padronizando o tamanho dos botões */
-
-.frontb {
-    padding: 1em 1.3em;
+.icons-top {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  margin-top: 20px;
 }
 
-.stopb {
-    padding: 1em 1.5em;
+.icons-botton {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
 }
 
-.backb {
-    padding: 1em 1.75em;
+.icons-image {
+  width: 151.495px;
+  height: 152.758px;
+  flex-shrink: 0;
 }
 
-.leftb {
-    padding: 1em .6em;
+.btns-frontb,
+.btns-leftb,
+.btns-rightb,
+.btns-backb,
+.btns-stopb {
+  appearance: none;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  border: none;
+  outline: none;
+  background: none;
+
 }
 
-.rightb {
-    padding: 1em 1.3em;
-}
-
-/* Seção responsável pela entrada manual de comandos */
-
-form {
-    position: fixed;
-    top: calc(100vh - 25vh);
-    left: 38%;
-    display: flex;
+@media (max-width: 950px) {
+  .main {
     flex-direction: column;
+    width: 80vw;
+  }
+
+  .left {
+    width: 50vw;
+    display: flex;
     align-items: center;
+  }
+
+  .left-logo {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+  }
+
+  .left > input {
+    width: 80vw;
+    max-width: 600px;
+    align-items: center;
+  }
+
+  .buttondiv {
     margin-top: 20px;
+    margin-left: 0;
+    align-items: center;
+  }
+
+  .custom-button {
+    width: 70vw;
+  }
+
+  .left-logo > h1 {
+    width: 80vw;
+    font-size: 40px;
+    line-height: 50px;
+    text-align: center;
+  }
+
+  .name-comando {
+    width: 50vw;
+    align-items: center;
+  }
+
+  .right {
+    width: 50vw;
+    display: flex;
+    margin-top: 0;
+    align-items: center;
+  }
+
+  .right > h1 {
+    font-size: 40px;
+    text-align: center;
+  }
+
+  .line {
+    width: 100%;
+    height: 1px;
+  }
+
+  .icons {
+    width: 60vw;
+    height: 60vh;
+  }
 }
 
-label, input, button {
-    font-size: 18px;
-    margin-bottom: 10px;
+@media (max-width: 600px) {
+  .main {
+    flex-direction: column;
+    width: 80vw;
+  }
+
+  .left {
+    width: 50vw;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+  }
+
+  .left-logo {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+  }
+
+  .left > input {
+    width: 80vw;
+    max-width: 600px;
+    align-items: center;
+  }
+
+  .buttondiv {
+    margin-top: 20px;
+    margin-left: 0;
+    align-items: center;
+  }
+
+  .custom-button {
+    width: 70vw;
+  }
+
+  .left-logo > h1 {
+    width: 70vw;
+    font-size: 40px;
+    line-height: 50px;
+    text-align: center;
+  }
+
+  .name-comando {
+    width: 90vw;
+    align-items: center;
+  }
+
+  .right {
+    width: 50vw;
+    display: flex;
+    margin-top: 0;
+    align-items: center;
+  }
+
+  .right > h1 {
+    font-size: 40px;
+    text-align: center;
+  }
+
+  .line {
+    width: 100%;
+    height: 1px;
+  }
+
+  .icons {
+    width: 50%;
+    height: 50%;
+  }
 }
-
-input[type="text"] {
-    padding: 10px;
-    border: 2px solid #ccc;
-    border-radius: 5px;
-    width: 300px;
-}
-
-button[type="submit"] {
-    background-color: #4CAF50;
-    color: white;
-    padding: 10px 20px;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-    transition: background-color 0.3s ease;
-}
-
-button[type="submit"]:hover {
-    background-color: #3e8e41;
-}
-
-
-
