adicionando animação de quando os botões são clicados

--- a/codigos/web/ura-joystick/style.css
+++ b/codigos/web/ura-joystick/style.css
@@ -158,7 +158,14 @@
   border: none;
   outline: none;
   background: none;
+}
 
+.btns-frontb:active,
+.btns-leftb:active,
+.btns-rightb:active,
+.btns-backb:active,
+.btns-stopb:active {
+    transform: translateY(-5px);
 }
 
 @media (max-width: 950px) {
